# tfralert

./: .gitignore  COPYING.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  render.yaml
.github/workflows/: ci.yml
app/: Cargo.toml  Dioxus.toml
app/assets/: extra
app/src/: main.rs  notify.rs
assets/: style.css
bot/: Cargo.toml  bsky.rs  main.rs  mastodon.rs
bot/src/: bsky.rs  main.rs  mastodon.rs
core/: Cargo.toml
core/src/: lib.rs
src/: logic.rs  main.rs  notify.rs
