[package]
name = "tfr_alert"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0-rc.2", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4"
anyhow = "1"
log = "0.4"
scraper = "0.24.0"
chrono = "0.4.42"
async-std = "1.13.2"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
