[package]
name = "tfr_app"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rocodes/tfralert"


[dependencies]
tfr_core = { path = "../core" }
dioxus = { version = "0.6.3", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4"
anyhow = "1"
log = "0.4"
scraper = "0.24.0"
chrono = "0.4.42"
async-std = "1.13.2"
winrt-notification = "0.5.1"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
