[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
