[package]
name = "tfr_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "tfr_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
log = "0.4"
scraper = "0.24.0"
chrono = "0.4.42"
async-std = "1.13.2"

